--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel": "^6.5.2",
+    "babel-preset-react": "^6.5.0",
     "css-loader": "^0.23.1",
     "npm-install-webpack-plugin": "^3.1.1",
     "style-loader": "^0.13.1",
@@ -20,6 +22,7 @@
   },
   "dependencies": {
     "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
     "react": "^15.0.2",
     "react-dom": "^15.0.2"
   }
