--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kanban_app",
+  "name": "PinApp",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,7 +12,12 @@
   "license": "ISC",
   "devDependencies": {
     "babel": "^6.5.2",
+    "babel-core": "^6.9.1",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-transform-runtime": "^6.9.0",
+    "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.1",
     "npm-install-webpack-plugin": "^3.1.1",
     "style-loader": "^0.13.1",
@@ -22,7 +27,9 @@
   },
   "dependencies": {
     "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
+    "babel-runtime": "^6.9.2",
     "react": "^15.0.2",
     "react-dom": "^15.0.2"
   }
